--- a/core/.env
+++ b/core/.env
@@ -2,3 +2,20 @@ OPENAI_KEY=...
 FIREBASE_ADMIN=...
 AEGIS_MASTER_HMAC=...
 ATHAL_SIG_KEY=...
+# ===============================
+# AEGIS | FIREBASE CONFIG
+# Projeto: willa-5b1ba
+# Núcleo: AEGIS
+# ===============================
+
+AEGIS_FIREBASE_API_KEY=AIzaSyDgcgl8YukifH_-1lPiVeTU1EWcvrnZcOk
+AEGIS_FIREBASE_AUTH_DOMAIN=willa-5b1ba.firebaseapp.com
+AEGIS_FIREBASE_PROJECT_ID=willa-5b1ba
+AEGIS_FIREBASE_STORAGE_BUCKET=willa-5b1ba.firebasestorage.app
+AEGIS_FIREBASE_DATABASE_URL=https://willa-5b1ba-default-rtdb.firebaseio.com
+
+AEGIS_FIREBASE_MESSAGING_SENDER_ID=514310892451
+AEGIS_FIREBASE_APP_ID=1:514310892451:web:cbd8211dde61d321050816
+AEGIS_FIREBASE_MEASUREMENT_ID=G-6LG86M5V96
+AEGIS_FIREBASE_PROJECT_NUMBER=514310892451
+AEGIS_FIREBASE_VERSION=2
