--- a/core/.env
+++ b/core/.env
@@ -1,7 +1,7 @@
 OPENAI_KEY=...
 FIREBASE_ADMIN=...
 AEGIS_MASTER_HMAC=...
-ATHAL_SIG_KEY=...
+ATHAL_SIG_KEY=YHc8dEJvN0ZtU2h...
 # ===============================
 # AEGIS | FIREBASE CONFIG
 # Projeto: willa-5b1ba
